<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name" >ApiDemos
    </string>
    <string name="action_settings" >Settings
    </string>
    <string name="hello_world" >Hello world!
    </string>
    <string name="activity_sample_code">API Demos</string>
    <string name="accessibility_node_provider_instructions">Enable TalkBack and Explore-by-touch from accessibility
     settings.Then touch the colored squares.</string>
    <!--===============AnimatorEvents=================-->
    <string name="events1">Sequencer Events:   </string>
    <string name="start">Start</string>
    <string name="repeat">Repeat</string>
    <string name="cancel">Cancel</string>
    <string name="end">End</string>
    <string name="events2">Animator Events   :   </string>

    <!-- ==============  Texts   ===================== -->
    <string name="link_text_auto"><b>text1: Various kinds
        of data that will be auto-linked.</b> In
        this text are some things that are actionable. For instance,
        you can click on http://www.google.com and it will launch the
        web brower. You can click on google.com too. If you
        click on (415) 555-1212 it should dial the phone. Or just write
        foobar@example.com for an e-mail link. If you have a URI link
        http://www.example.com/lala/foobar@example.com you should get the
        full link not the e-mail addree. Or you can put a location
        linke 1600 Amphitheatre Parkway, Mountain View 12345, 123456, 1234567, 12345678, CA 94043. To summarize:
        https://www.google.com, or 650-253-00000, somebody@example.com,
        or 9606 North MoPac Expressway, Suite 400,Austin,TX 78759.
    </string>
    <string name="link_text_manual"><b>text2: Explicit links using &lt;a&gt; markup.</b>
        This has markup for a <a href="http://www.google.com">link</a> specified
        via an &lt;a&gt; tag.  Use a \"tel:\" URL
        to <a href="tel:4155551212">dial a phone number</a>.
    </string>
    <string name="marquee_default">This use the default marquee animation limit of 3</string>
    <string name="marquee_once">This will run the marquee animation once</string>
    <string name="marquee_forever">This will run the marquee animation forever</string>
</resources>
