<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:id="@+id/container">

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
        <Button
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="Play"
                android:layout_weight="1"
                android:id="@+id/startButton"/>
        <Button
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="Cancel"
                android:layout_weight="1"
                android:id="@+id/cancelButton"/>
        <Button
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="End"
                android:layout_weight="1"
                android:id="@+id/endButton"/>
        <CheckBox
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_weight="2"
                android:id="@+id/endCB"
                android:text="End Immediately"/>

    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:weightSum="5">
        <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/events1"
                android:layout_weight="1"/>
        <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/start"
                android:id="@+id/startText"
                android:layout_weight="1"/>
        <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/repeat"
                android:id="@+id/repeatText"
                android:layout_weight="1"/>
        <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/cancel"
                android:id="@+id/cancelText"
                android:layout_weight="1"/>
        <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@+id/endText"
                android:text="@string/end"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:weightSum="5">
        <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/events2"
                android:layout_weight="1"/>
        <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/start"
                android:id="@+id/startTextAnimator"
                android:layout_weight="1"/>
        <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/repeat"
                android:id="@+id/repeatTextAnimator"
                android:layout_weight="1"/>
        <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/cancel"
                android:id="@+id/cancelTextAnimator"
                android:layout_weight="1"/>
        <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/end"
                android:id="@+id/endTextAnimator"
                android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>